# duckduckgo-mcp-server-ssl-fix

./: CHECKLIST.md  GITHUB_SETUP.md  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING_GUIDE.md  claude-code-config-example.json  pyproject.toml  test_search.py
.claude/: settings.local.json
src/duckduckgo_mcp_server/: server.py
