[project]
name = "duckduckgo-mcp-server-ssl-fix"
version = "0.2.0"
description = "MCP Server for searching via DuckDuckGo with configurable SSL verification (corporate proxy friendly)"
readme = "README.md"
authors = [{ name = "Smandya Shankar", email = "smandyashankar@example.com" }]
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.13.3", "httpx>=0.28.1", "mcp[cli]>=1.3.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/smandyashankar/duckduckgo-mcp-server"
Issues = "https://github.com/smandyashankar/duckduckgo-mcp-server/issues"

[project.scripts]
duckduckgo-mcp-server-ssl-fix = "duckduckgo_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/duckduckgo_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
